--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@ethersproject/shims": "^5.7.0",
+    "@json-rpc-tools/utils": "^1.7.6",
+    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@walletconnect/jsonrpc-types": "^1.0.3",
+    "@walletconnect/react-native-compat": "^2.9.1",
+    "@walletconnect/web3wallet": "^1.8.7",
+    "ethers": "^5.7.2",
     "expo": "~48.0.18",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "fast-text-encoding": "^1.0.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "expo-barcode-scanner": "~12.3.2"
+    "expo-barcode-scanner": "~12.3.2",
+    "react-native-get-random-values": "^1.9.0",
+    "userop": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
