--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xyft",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,33 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.7.0",
+    "@json-rpc-tools/utils": "^1.7.6",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@ethersproject/shims": "^5.7.0",
-    "@json-rpc-tools/utils": "^1.7.6",
-    "@react-native-async-storage/async-storage": "^1.19.1",
     "@walletconnect/jsonrpc-types": "^1.0.3",
     "@walletconnect/react-native-compat": "^2.9.1",
+    "@walletconnect/utils": "^2.9.1",
     "@walletconnect/web3wallet": "^1.8.7",
     "ethers": "^5.7.2",
-    "expo": "~48.0.18",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.4",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-crypto": "~12.4.1",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-random": "~13.2.0",
+    "expo-standard-web-crypto": "^1.6.0",
+    "expo-status-bar": "~1.6.0",
     "fast-text-encoding": "^1.0.6",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "expo-barcode-scanner": "~12.3.2",
-    "react-native-get-random-values": "^1.9.0",
+    "react-native": "^0.72.3",
+    "react-native-get-random-values": "~1.8.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "userop": "^0.3.1"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native-get-random-values"
+      ]
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "@types/react-native-vector-icons": "^6.4.13",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
