--- a/erect/Dockerfile
+++ b/erect/Dockerfile
@@ -6,8 +6,8 @@ WORKDIR /app
 ADD requirements.txt .
 RUN pip3 install -r requirements.txt
 ADD decompile.py .
-ADD .env .
-ADD panoramix ./panoramix
+ADD .env example.env
+ADD snaps_backend ./snaps_backend
 EXPOSE 8000
 CMD ["python3", "decompile.py"]
 
