--- a/package.json
+++ b/package.json
@@ -19,26 +19,27 @@
     "@walletconnect/react-native-compat": "^2.9.1",
     "@walletconnect/utils": "^2.9.1",
     "@walletconnect/web3wallet": "^1.8.7",
+    "@web3auth/react-native-sdk": "^3.3.0",
+    "buffer": "^6.0.3",
     "ethers": "^5.6.9",
     "expo": "^49.0.4",
     "expo-barcode-scanner": "~12.5.3",
     "expo-crypto": "~12.4.1",
     "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~3.2.2",
     "expo-random": "~13.2.0",
     "expo-standard-web-crypto": "^1.6.0",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~11.0.0",
     "fast-text-encoding": "^1.0.6",
     "react": "18.2.0",
     "react-native": "^0.72.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "userop": "^0.3.1",
-    "expo-linking": "~3.2.2",
-    "expo-web-browser": "~11.0.0",
-    "buffer": "^6.0.3",
-    "@web3auth/react-native-sdk": "^3.3.0"
+    "userop": "^0.3.1"
   },
   "expo": {
     "install": {
