--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "react-native": "^0.72.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "^1.1.0",
     "userop": "^0.3.1"
   },
   "expo": {
