--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@walletconnect/utils": "^2.9.1",
     "@walletconnect/web3wallet": "^1.8.7",
     "@web3auth/react-native-sdk": "^3.3.0",
+    "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "ethers": "^5.6.9",
     "expo": "^49.0.4",
